--- a/Practica html/html/index.html
+++ b/Practica html/html/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
       <h2>Chef</h2>
-      <a href="chef.html">
+      <a href="chef.html"></a>
         <img src="../imgs/chef.png" />
     </div>
     <div>
