--- a/Practica html/html/index.html
+++ b/Practica html/html/index.html
@@ -15,12 +15,12 @@
     </div>
     <div>
       <h2>Chef</h2>
-      <a href="./chef.html"></a>
+      <a href="../html/chef.html"></a>
         <img src="../imgs/chef.png" />
     </div>
     <div>
       <h2>Cliente</h2>
-      <a href="./cliente.html"></a>
+      <a href="../html/cliente.html"></a>
       <img src="../imgs/person.png" />
     </div>
   </main>
