--- a/Practica html/html/index.html
+++ b/Practica html/html/index.html
@@ -14,13 +14,11 @@
       <img src="../assets/logoSinFondo.png" />
     </div>
     <div>
-      <h2>Chef</h2>
-      <a href="../html/chef.html"></a>
+      <a href="../html/chef.html"><h2>Chef</h2></a>
         <img src="../imgs/chef.png" />
     </div>
     <div>
-      <h2>Cliente</h2>
-      <a href="../html/cliente.html"></a>
+      <a href="../html/cliente.html"><h2>Cliente</h2></a>
       <img src="../imgs/person.png" />
     </div>
   </main>
