nombres de productos

--- a/Practica html/html/cliente.html
+++ b/Practica html/html/cliente.html
@@ -16,17 +16,17 @@
             <div>
                 <h2>Sabores</h2>
                 <ul>
-                    <li>Chocolate ------------ $150</li>
-                    <li>Vainilla --------------- $100</li>
-                    <li>Fresa ------------------ $130</li>
-                    <li>Café ------------------- $180</li>
+                    <li>Chocolate ------------ $20</li>
+                    <li>Vainilla --------------- $20</li>
+                    <li>Fresa ------------------ $20</li>
+                    <li>Café ------------------- $30</li>
                 </ul>
                 <h2>Decoraciones de otro mundo</h2>
                 <ul>
-                    <li>Estrellas de Chocolate --- $10</li>
-                    <li>Vacas astronautas --- $25</li>
-                    <li>Cohetes --- $25</li>
-                    <li>Asteroides de nuez -- $30</li>
+                    <li>Hojas de chocolate --- $.5</li>
+                    <li>Animales de caramelo --- $1</li>
+                    <li>Perlasd de azucar --- $.1</li>
+                    <li>Fondant -- $5</li>
                 </ul>
             </div>
             <section>
@@ -63,19 +63,19 @@
                     <h2>Decoraciones</h2>
                     <div>
                         <div>
-                            <label for="hojasChocolate">Estrellas</label>
+                            <label for="hojasChocolate">Hojas de chocolate</label>
                             <input type="checkbox" name="hojasChocolate"/>
                         </div>
                         <div>
-                            <label for="animalesCaramelo">Vacas</label>
+                            <label for="animalesCaramelo">Animales de caramelo</label>
                             <input type="checkbox" name="animalesCaramelo" />
                         </div>
                         <div>
-                            <label for="perlas">Cohetes</label>
+                            <label for="perlas">Perlas de azucar</label>
                             <input type="checkbox" name="perlas"/>
                         </div>
                         <div>
-                            <label for="fondant">Asteroides</label>
+                            <label for="fondant">Fondant</label>
                             <input type="checkbox" name="fondant"/>
                         </div>
                     </div>
